--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "~1.5.0",
     "express": "~4.0.0",
     "express-x-hub": "^1.0.3",
+    "method-override": "~1.0.0",
     "q": "^1.4.1"
   },
   "scripts": {
