--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "~1.5.0",
+    "exec": "^0.2.0",
     "express": "~4.0.0",
     "express-x-hub": "^1.0.3",
     "method-override": "~1.0.0",
